<resources>
    <string name="app_name">Composition</string>
    <string name="welcome_logo">Welcome Logo</string>
    <string name="txt_title">Состав числа</string>
    <string name="game_rules">Правила играы: перед вами будет три фигуры , две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхей фигуре, для этого нужно вставить недостающее число.\n\nПример в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит на месте воаросительного знака должно быть число 3, потому что 3+4=7</string>
    <string name="game_rules_accepted">Понятно</string>
    <string name="game_level">Выберите уровень:</string>
    <string name="test_level">Тестовый</string>
    <string name="easy_level">Легкий</string>
    <string name="middle_level">Средний</string>
    <string name="hard_level">Сложный</string>
    <string name="game_start_time">00:00</string>
    <string name="game_right_answers_count">Правильных ответов: %s (минимум: %s)</string>
    <string name="question_mark">\?</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Попробовать снова</string>
    <string name="required_right_answers">Необходимое количество правильных ответов: %s</string>
    <string name="score_answers">Ваш счет: %d</string>
    <string name="required_right_answers_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="right_answers_percentage">процент правильных ответов: %s</string>
</resources>