<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_level"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        />
    <TextView
        style="@style/GameLevelTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_level"
        android:background="@android:color/holo_blue_dark"
        />
    <TextView
        style="@style/GameLevelTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/easy_level"
        android:background="@android:color/holo_green_light"
        />
    <TextView
        style="@style/GameLevelTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/middle_level"
        android:background="@android:color/holo_orange_light"
        />
    <TextView
        style="@style/GameLevelTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard_level"
        android:background="@android:color/holo_red_light"
        />


</LinearLayout>