<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="gameResult"
            type="com.nursultan.composition.domain.entity.GameResult" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.GameResultFragment">

        <ImageView
            android:id="@+id/iv_game_result"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/game_over"
            android:src="@drawable/happiness"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_required_score"
            style="@style/GameOverTV"
            android:text="@{gameResult.gameSettings.minCountRightAnswersString}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_game_result" />

        <TextView
            android:id="@+id/tv_score"
            style="@style/GameOverTV"
            android:text="@{gameResult.countOfRightAnswersSting}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_required_score" />

        <TextView
            android:id="@+id/tv_required_percentage"
            style="@style/GameOverTV"
            android:text="@{gameResult.gameSettings.minPercentOfRightAnswersString}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_score" />

        <TextView
            android:id="@+id/tv_right_percentage"
            style="@style/GameOverTV"
            android:text="@string/right_answers_percentage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_required_percentage" />

        <Button
            android:id="@+id/btn_retry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/try_again"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>