<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.nursultan.composition.presentation.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.GameFragment">

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.timerTime}"
            android:textColor="@color/purple_700"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/game_start_time" />

        <TextView
            android:id="@+id/tv_option1"
            style="@style/OptionTV"
            setOnOptionClickListener="@{(option)->viewModel.checkIsRightAnswer(option)}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@{viewModel.gameQuestion.option.get(0).toString()}"
            app:layout_constraintBottom_toTopOf="@+id/tv_option4"
            app:layout_constraintEnd_toStartOf="@+id/tv_option2"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="1" />

        <TextView
            android:id="@+id/tv_option2"
            style="@style/OptionTV"
            setOnOptionClickListener="@{(option)->viewModel.checkIsRightAnswer(option)}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:text="@{viewModel.gameQuestion.option.get(1).toString()}"
            app:layout_constraintEnd_toStartOf="@id/tv_option3"
            app:layout_constraintStart_toEndOf="@id/tv_option1"
            app:layout_constraintTop_toTopOf="@+id/tv_option1"
            tools:text="2" />

        <TextView
            android:id="@+id/tv_option3"
            style="@style/OptionTV"
            setOnOptionClickListener="@{(option)->viewModel.checkIsRightAnswer(option)}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:text="@{viewModel.gameQuestion.option.get(2).toString()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_option2"
            app:layout_constraintTop_toTopOf="@+id/tv_option2"
            tools:text="3" />

        <TextView
            android:id="@+id/tv_option4"
            style="@style/OptionTV"
            setOnOptionClickListener="@{(option)->viewModel.checkIsRightAnswer(option)}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:text="@{viewModel.gameQuestion.option.get(3).toString()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_option5"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="4" />

        <TextView
            android:id="@+id/tv_option5"
            style="@style/OptionTV"
            setOnOptionClickListener="@{(option)->viewModel.checkIsRightAnswer(option)}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_purple"
            android:text="@{viewModel.gameQuestion.option.get(4).toString()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_option6"
            app:layout_constraintStart_toEndOf="@+id/tv_option4"
            tools:text="5" />

        <TextView
            android:id="@+id/tv_option6"
            style="@style/OptionTV"
            setOnOptionClickListener="@{(option)->viewModel.checkIsRightAnswer(option)}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:text="@{viewModel.gameQuestion.option.get(5).toString()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_option5"
            tools:text="6" />

        <TextView
            android:id="@+id/tv_progress"
            isRequiredCount="@{viewModel.isRequiredCount()}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="30dp"
            android:text="@{viewModel.progressString}"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/game_right_answers_count" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/design_default_color_primary_dark"
            android:max="100"
            android:secondaryProgress="@{viewModel.requiredPercentageOfRightAnswers}"
            app:isRequiredPercentage="@{viewModel.isRequiredPercentage()}"
            app:layout_constraintBottom_toTopOf="@+id/tv_option2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:setProgress="@{viewModel.percentageOfRightAnswers}" />

        <TextView
            android:id="@+id/tv_question"
            style="@style/GameTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@color/teal_700"
            android:text="@string/question_mark"
            app:layout_constraintBottom_toTopOf="@+id/tv_progress"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_left_number"
            app:layout_constraintTop_toBottomOf="@+id/game_sum" />

        <TextView
            android:id="@+id/tv_left_number"
            style="@style/GameTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/tv_question"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_question"
            app:numberAsText="@{viewModel.gameQuestion.visibleNumber}"
            tools:text="17" />

        <TextView
            android:id="@+id/game_sum"
            style="@style/GameTV"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_tv"
            app:layout_constraintBottom_toTopOf="@id/tv_question"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_timer"
            app:layout_constraintVertical_chainStyle="packed"
            app:numberAsText="@{viewModel.gameQuestion.sum}"
            tools:text="25" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>